<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="360dp"
    android:layout_gravity="center"
    app:cardCornerRadius="24dp">

    <View
        android:layout_width="360dp"
        android:layout_height="200dp" />

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_about"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:text="@string/about_dialog"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/created"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textColorLink="#5C5151"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_ok"
                android:text="@string/ok" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>