<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2E1"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:src="@drawable/logo" />

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="8dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        app:cardBackgroundColor="#4fc3f7"-->
    <!--        app:cardCornerRadius="16dp">-->

    <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--            android:id="@+id/trash_bin"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:background="?android:selectableItemBackground"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:padding="16dp">-->

    <!--            <androidx.appcompat.widget.AppCompatImageView-->
    <!--                android:layout_width="26dp"-->
    <!--                android:layout_height="26dp"-->
    <!--                android:layout_marginStart="16dp"-->
    <!--                android:src="@drawable/icon_delete"-->
    <!--                app:tint="@color/white" />-->

    <!--            <androidx.appcompat.widget.AppCompatTextView-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_marginStart="16dp"-->
    <!--                android:text="@string/trash_bin"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="18sp" />-->
    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
    <!--    </androidx.cardview.widget.CardView>-->


    <androidx.cardview.widget.CardView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#4fc3f7"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_smiley"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#4fc3f7"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/share_icon"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#4fc3f7"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/info"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>